--- a/school-service.properties
+++ b/school-service.properties
@@ -1,1 +1,8 @@
 
+server.port=9098
+spring.application.name=school-service
+
+eureka.instance.lease-renewal-interval-in-seconds=2
+eureka.instance.lease-expiration-duration-in-seconds=1
+eureka.client.healthcheck.enabled=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
