--- a/school-service.properties
+++ b/school-service.properties
@@ -2,6 +2,8 @@
 server.port=9098
 spring.application.name=school-service
 
+feign.hystrix.enabled=true
+
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
