--- a/school-service.properties
+++ b/school-service.properties
@@ -8,3 +8,6 @@ eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+student-service.ribbon.eureka.enabled=false
+student-service.ribbon.listOfServers=localhost:9000,localhost:9100
