--- a/school-service.properties
+++ b/school-service.properties
@@ -10,4 +10,5 @@ eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 student-service.ribbon.eureka.enabled=false
-student-service.ribbon.listOfServers=localhost:9000,localhost:9100
+student-service.ribbon.listOfServers=localhost:8091,localhost:8092
+student-service.ribbon.ServerListRefreshInterval=10000
