--- a/school-service.properties
+++ b/school-service.properties
@@ -9,6 +9,6 @@ eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-student-service.ribbon.eureka.enabled=false
-student-service.ribbon.listOfServers=localhost:8091,localhost:8092
-student-service.ribbon.ServerListRefreshInterval=10000
+studentService.ribbon.eureka.enabled=false
+studentService.ribbon.listOfServers=localhost:8091,localhost:8092
+studentService.ribbon.ServerListRefreshInterval=10000
