--- a/school-service.properties
+++ b/school-service.properties
@@ -10,5 +10,5 @@ eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 school-service.ribbon.eureka.enabled=true
-school-service.ribbon.listOfServers=localhost:8091,localhost:8092
+school-service.ribbon.listOfServers=172.31.98.38:8091,l172.31.98.38:8092
 school-service.ribbon.ServerListRefreshInterval=10000
