--- a/school-service.properties
+++ b/school-service.properties
@@ -9,6 +9,6 @@ eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-school-service.ribbon.eureka.enabled=true
-school-service.ribbon.listOfServers=172.31.98.38:8091,l172.31.98.38:8092
-school-service.ribbon.ServerListRefreshInterval=10000
+student-service.ribbon.eureka.enabled=true
+student-service.ribbon.listOfServers=172.31.98.38:8091,l172.31.98.38:8092
+student-service.ribbon.ServerListRefreshInterval=10000
