--- a/school-service.properties
+++ b/school-service.properties
@@ -4,10 +4,11 @@ spring.application.name=school-service
 
 feign.hystrix.enabled=true
 
-eureka.instance.lease-renewal-interval-in-seconds=2
+eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
 
 student-service.ribbon.eureka.enabled=true
 student-service.ribbon.listOfServers=172.31.98.38:8091,l172.31.98.38:8092
