--- a/student-service.properties
+++ b/student-service.properties
@@ -5,3 +5,5 @@ eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+student-service.ribbon.listOfServers=localhost:8091,localhost:8092
