--- a/student-service.properties
+++ b/student-service.properties
@@ -5,6 +5,7 @@ eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id: student-service:9098
 
 student-service.ribbon.eureka.enabled=true
 student-service.ribbon.listOfServers=localhost:8091,localhost:8092
