--- a/school-service.properties
+++ b/school-service.properties
@@ -14,3 +14,13 @@ eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.
 student-service.ribbon.eureka.enabled=true
 student-service.ribbon.listOfServers=localhost:9092,localhost:9999
 student-service.ribbon.ServerListRefreshInterval=10000
+
+
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
+
+#RabbitMQ connection details
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
