--- a/student-service.properties
+++ b/student-service.properties
@@ -10,3 +10,13 @@ eureka.instance.instance-id: student-service:9098
 student-service.ribbon.eureka.enabled=true
 student-service.ribbon.listOfServers=localhost:8091,localhost:8092
 student-service.ribbon.ServerListRefreshInterval=10000
+
+
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
+
+#RabbitMQ connection details
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
