--- a/school-service.properties
+++ b/school-service.properties
@@ -1,7 +1,7 @@
 
 server.port=9098
 spring.application.name=school-service
-app.service-name= School Service
+app.service-name= School Service - refresh test
 
 feign.hystrix.enabled=true
 
