--- a/student-service.properties
+++ b/student-service.properties
@@ -1,6 +1,6 @@
 server.port=8098
 spring.application.name=student-service
-app.service-name= Student Service - Config Server Bus refresh 777
+app.service-name= Student Service - Config Server Bus refresh dedede
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
