--- a/student-service.properties
+++ b/student-service.properties
@@ -1,14 +1,15 @@
-server.port=8098
+
+server.port=${PORT:0}
 spring.application.name=student-service
 app.service-name= Student Service - Config Server Bus refresh dedede
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
+eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
 
 student-service.ribbon.eureka.enabled=true
-student-service.ribbon.listOfServers=localhost:8091,localhost:8092
+student-service.ribbon.listOfServers=localhost:8098,localhost:8091,localhost:8092
 student-service.ribbon.ServerListRefreshInterval=10000
 
 
