--- a/school-service.properties
+++ b/school-service.properties
@@ -1,5 +1,5 @@
 
-server.port=9098
+server.port=${PORT:0}
 spring.application.name=school-service
 app.service-name= School Service - refresh test
 
@@ -9,10 +9,10 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
+eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
 
 student-service.ribbon.eureka.enabled=true
-student-service.ribbon.listOfServers=localhost:9092,localhost:9999
+student-service.ribbon.listOfServers=localhost:9098,localhost:9092,localhost:9999
 student-service.ribbon.ServerListRefreshInterval=10000
 
 
