--- a/student-service.properties
+++ b/student-service.properties
@@ -1,5 +1,5 @@
 
-server.port=${PORT:0}
+server.port=${port:8080}
 spring.application.name=student-service
 app.service-name= Student Service - Config Server Bus refresh dedede
 eureka.instance.lease-renewal-interval-in-seconds=2
