--- a/school-service.properties
+++ b/school-service.properties
@@ -1,5 +1,5 @@
 
-server.port=${PORT:0}
+server.port=${port:9090}
 spring.application.name=school-service
 app.service-name= School Service - refresh test
 
