--- a/school-service.properties
+++ b/school-service.properties
@@ -9,7 +9,7 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.client.healthcheck.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+eureka.instance.instance-id=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
 
 management.security.enabled=false
 management.endpoints.web.exposure.include=*
